# planningpoker

./: .gitignore  README.md  test-guest-join.js
.github/workflows/: deploy.yml
backend/: Cargo.toml  Dockerfile
backend/.github/workflows/: deploy.yml
backend/src/: main.rs  websocket.rs
backend/src/config/: mod.rs
backend/src/handlers/: auth.rs  game_room.rs  mod.rs  room.rs  user.rs
backend/src/middleware/: auth.rs
backend/src/models/: game_room.rs  mod.rs  user.rs
frontend/: .env.production  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/public/: site.webmanifest
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AuthenticatedOrGuestRoute.tsx  CreateRoom.tsx  Dashboard.tsx  GameRoom.tsx  GuestCreateRoom.tsx  GuestJoin.tsx  GuestJoinByCode.tsx  JoinRoom.tsx  LanguageSwitcher.tsx  Login.tsx  PrivateRoute.tsx  ProfileImageUpload.tsx  Register.tsx  RoomInvite.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/i18n/: index.ts
frontend/src/i18n/locales/: da.json  en.json
frontend/src/pages/: Auth.tsx  Landing.tsx
src/handlers/: game_room.rs
src/models/: user.rs
