[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-cors = "0.6"
actix = "0.13"
actix-web-actors = "4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
mongodb = "2.8"
futures = "0.3"
futures-util = "0.3"
env_logger = "0.10"
dotenv = "0.15"
jsonwebtoken = "9.1"
bcrypt = "0.15"
thiserror = "1.0"
rand = "0.8"
lazy_static = "1.4"
