[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4.0"
actix-cors = "0.6.4"
actix = "0.13.1"
actix-web-actors = "4.2.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.32.0", features = ["full"] }
tokio-stream = "0.1"
mongodb = { version = "2.8.0", features = ["tokio-runtime"] }
futures = "0.3"
futures-util = "0.3.28"
env_logger = "0.10.0"
dotenv = "0.15.0"
jsonwebtoken = "9.1.0"
bcrypt = "0.15.0"
thiserror = "1.0"
rand = "0.8.5"
lazy_static = "1.4.0"
log = "0.4.20"
actix-multipart = "0.6.1"
uuid = { version = "1.6.1", features = ["v4"] }
image = "0.24.7"
actix-files = "0.6.6"
